<resources>
    <string name="app_name">Todo List</string>
    <string name="setting_button">setting button</string>
    <string name="title_header">To-dos</string>
    <string name="sub_title_header">2 to-dos</string>
    <string name="icon_back_home_desc">icon back home</string>
    <string name="add_button_desciption">add button desciption</string>
    <string name="task_view">Task view</string>
    <string name="radio_button">Radio button</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_to_do_title">Edit To-Do</string>
    <string name="new_to_do">New to-do</string>
    <string name="create_to_do_title">Add to-do</string>
    <string name="action_delete">Delete</string>
    <string name="action_hide_completed">Hide completed</string>
    <string name="delete_title">Select</string>
    <string name="select_all">Select all</string>
    <string name="delete">Delete</string>
    <string name="delete_button">delete button</string>
</resources>