<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp">

    <!-- Header: Cancel - Title - Save -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textColor="@color/primary" />

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/edit_to_do_title"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/primary"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:gravity="end"/>
    </LinearLayout>

    <!-- Input -->
    <EditText
        android:id="@+id/inputTodoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/white_background"
        android:hint="@string/new_to_do"
        android:inputType="text"
        android:padding="12dp"/>

</LinearLayout>
